--- a/CV.Rmd
+++ b/CV.Rmd
@@ -1,73 +1,58 @@
 ---
-name: Bryan
-surname: Jenks
-position: "Information Technology Associate"
-address: "Covered California"
-profilepic: "./img/me.jpg"
-www: "bryanjenks.dev"
-email: "bryan@bryanjenks.dev"
-github: tallguyjenks
-linkedin: bryanjenks
-orcid: 0000-0002-9604-3069
+name: Naveen
+surname: Kannan
+position: "Research Associate"
+address: "Cleveland, Ohio"
+www: naveenkannan.netlify.app
+phone: +1 973 519 5397
+email: "naveen.kannan12@gmail.com"
+github: naveenk2022
+linkedin: naveen-kannan-177120118
 date: "`r format(Sys.time(), '%B %Y')`"
+aboutme: "Data Scientist experienced with data analysis, visualization, building pipelines, automation and Data Engineering. I have a strong passion for coding, visualization and automation, and I compiled this CV with code. United States Permanent Resident."
 headcolor: 990000
-aboutme: "I have been writing production software in a variety of languages for over 5 years for various California State Government Agencies. I have a deep driven passion for software, automation, and data Engineering. This very CV was even compiled with code."
-docname: CV
 output: vitae::awesomecv
 ---
-
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE,
-                      warning = FALSE,
-                      message = FALSE)
-
-require(xfun)
-
-packages <- c('vitae'     # The CV's LaTeX Template
-             ,'tibble'    # Data structure for tribbles
-             ,'magrittr'  # The Pipe %>%
-             ,'here'      # Relative File Paths
-             ,'readr'     # Data Loading
-             ,'glue'      # String Manipulation
-            )
-
-xfun::pkg_attach2(packages, message = FALSE)
-
-source(file = here("r","data.r"))
-
-```
-
-# Employment
-
-```{r EMPLOYMENT}
-
-work %>%
-  detailed_entries(
-    with = title,
-    what = unit,
-    why = detail,
-    when = glue::glue("{startMonth} {startYear} --> {endMonth} {endYear}",.na = ""),
-    where = where
-  )
-
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+options(tinytex.verbose = TRUE)
+library(vitae)
+library(kableExtra)
+library(here)
+library(tibble)
+library(readr)
+library(glue)
+source(file = here("data","data.r"))
 ```
 
 # Education
 
-```{r EDUCATION}
+```{r}
+library(tibble)
+tribble(
+  ~ Degree, ~ Year, ~ Institution, ~ Where, ~ Detail,
+  "MS in Biomedical and Health Informatics", "JANUARY 2022 – AUGUST 2023", "Case Western Reserve University", "Cleveland, Ohio","GPA-3.9" ,
+  "Bachelor of Medicine and Bachelor of Surgery", "SEPTEMBER 2016 - MARCH 2020", "Madras Medical College", "Chennai, India","GPA-4.0" 
+) %>% 
+  detailed_entries(Institution, Year, Degree, Where,Detail)
+```
 
-edu %>%
+# Experience
+
+```{r Research, results = "asis"}
+
+experience %>%
   detailed_entries(
-    with = inst,
-    what = degree,
+    with = title,
+    what = unit,
     why = detail,
-    when = glue::glue("{startYear} --> {endYear}",.na = ""),
-    where = where
+    when = glue::glue("{startMonth} {startYear} - {endMonth} {endYear}",.na = ""),
+    where = where, .protect = F
   )
 
 ```
 
-# Skills
+# Technical Skills 
 
 ```{r SKILLS}
 
@@ -79,64 +64,6 @@ skills %>%
 
 ```
 
-# Honors
 
-```{r HONORS}
 
-honors %>%
-  detailed_entries(
-    with = area,
-    what = accomplishment,
-    why = detail,
-    when = year,
-    where = where
-  )
 
-```
-
-# Projects
-
-```{r PROJECTS}
-
-projects %>%
-  detailed_entries(
-    with = area,
-    what = accomplishment,
-    why = detail,
-    when = year,
-    where = where
-  )
-
-```
-
-# Works
-
-```{r WORKS}
-
-works %>%
-  detailed_entries(
-    with = area,
-    what = accomplishment,
-    why = detail,
-    when = year,
-    where = where
-  )
-
-```
-
-\pagebreak
-
-# Certifications
-
-```{r CERTIFICATIONS}
-
-certifications %>%
-  detailed_entries(
-    with = area,
-    what = accomplishment,
-    why = detail,
-    when = year,
-    where = where
-  )
-
-```
