--- a/CV.Rmd
+++ b/CV.Rmd
@@ -9,7 +9,7 @@ email: "naveen.kannan12@gmail.com"
 github: naveenk2022
 linkedin: naveen-kannan-177120118
 date: "`r format(Sys.time(), '%B %Y')`"
-aboutme: "Data Scientist experienced with data analysis, visualization, building pipelines, automation and Data Engineering. I have a strong passion for coding, visualization and automation, and I compiled this CV with code. United States Permanent Resident."
+aboutme: "Data Scientist experienced with data analysis, visualization, building scientific pipelines and Data Engineering. I have a strong passion for learning, documentation and automation, and I compiled this CV with code. United States Permanent Resident."
 headcolor: 990000
 output: vitae::awesomecv
 ---
