--- a/CV.Rmd
+++ b/CV.Rmd
@@ -10,7 +10,7 @@ github: naveenk2022
 linkedin: naveen-kannan-177120118
 date: "`r format(Sys.time(), '%B %Y')`"
 aboutme: "Data Scientist experienced with data analysis, visualization, building scientific pipelines and Data Engineering. I have a strong passion for learning, documentation and automation, and I compiled this CV with code. United States Permanent Resident."
-headcolor: 990000
+headcolor: 414141
 output: vitae::awesomecv
 ---
 ```{r setup, include=FALSE}
@@ -52,6 +52,35 @@ experience %>%
 
 ```
 
+# Teaching Experience
+
+```{r Teaching, results = "asis"}
+
+teaching %>%
+  detailed_entries(
+    with = title,
+    what = unit,
+    why = detail,
+    when = glue::glue("{startMonth} {startYear} - {endMonth} {endYear}",.na = ""),
+    where = where, .protect = F
+  )
+
+```
+
+# Leadership
+
+```{r Leadership, results = "asis"}
+
+leadership %>%
+  detailed_entries(
+    with = title,
+    what = unit,
+    why = detail,
+    when = glue::glue("{startMonth} {startYear} - {endMonth} {endYear}",.na = ""),
+    where = where, .protect = F
+  )
+
+```
 # Technical Skills 
 
 ```{r SKILLS}
@@ -64,6 +93,27 @@ skills %>%
 
 ```
 
+# Publications
+
+-   Jayakrishnan Ajayakumar ^a^, Andrew J. Curtis ^a^ , Felicien Maisha ^b^ , Sandra Bempah ^c^ , Afsar Ali ^b,d^ , J. Glenn Morris Jr. ^b,e^ , **Naveen Kannan** ^a^ , and Grace Armstrong ^a^, ^a^Department of Population and Quantitative Health Sciences, School of Medicine, Case Western Reserve University, Cleveland, Ohio, USA; ^b^Emerging Pathogens Institute, University of Florida, Gainesville, Florida, USA; ^c^Department of Geography, Kent State University, Kent, Ohio, USA; ^d^Department of Environmental & Global Health, College of Public Health and Health Professions, University of Florida, Gainesville, Florida, USA; ^e^College of Medicine, University of Florida, Gainesville, Florida, USA, Using Spatial Video and Deep Learning for Automated Mapping of Relief Camps. [Manuscript under review]
+
+-   **N. Kannan**^1^, N. Wheeler^1^, Genome Center for Alzheimer's Disease, L-S. Wang^2^, Y. Leung^2^, W. S.
+Bush^1^; ^1^Cleveland Inst. for Computational Biology, Dept. for Population and Quantitative Hlth.Sci., Case Western
+Reserve Univ., Cleveland, OH, ^2^Dept. of Pathology and Lab. Med., Penn Neurodegeneration Genomics Ctr.,
+Perelman Sch. of Med., Univ. of Pennsylvania, Philadelphia, PA., Annotation and scoring of the deleteriousness of individual genetic variants in the 4th release of the Alzheimer’s Disease Sequencing Project;(PB4451). Presented at the Annual Meeting of The American Society of Human Genetics, November 3, 2023 in Washington DC.
+
+-   Suebsarn R., W. T., **Naveen K**., Ellis W., Atsadaporn N., Chitchanok B., Chantira C., Christine S., Heba A. Using regression analysis and machine learning approach to understand the association between comorbidities, medication nonadherence, activity of daily living, and heart condition status among older adults in the United States. [Manuscript under review]
+
+-   Segamalai, D., Abdul Jameel, A. R., **Kannan, N**., Anbalagan, A., Duraisamy, B., Raju, P., & Devy Gounder, K. (2017). [Mediastinal pseudocyst: varied presentations and management---experience from a tertiary referral care centre in India.](https://downloads.hindawi.com/archive/2017/5247626.pdf) *HPB Surgery*, *2017*.
+
+-   Vellaisamy, R., **Kannan, N**., Anbalagan, A., Raju, P., Duraisamy, B., Murugesan, C. S., & Gounder, K. D. (2016). [Endoscopic access to hepatic duct through duodenum during follow up--after primary surgery for hepatolithiasis](https://hpbonline.org/article/S1365-182X(16)31428-9/fulltext). *HPB*, *18*, e530.
+
+-   Ramasamy, V., Vellaisamy, R., **Kannan, N**., & Gounder, K. D. (2016). [Refined technique of access loop in hepatobiliary surgery.](https://hpbonline.org/article/S1365-182X(16)31598-2/abstract) *HPB*, *18*, e593-e594.
+
+-   **Kannan, N**., Vellaisamy, R., Govindarajan, M., & Gounder, K. D. (2016). [Pellagra following pancreaticoduodenectomy for malignant pancreatic carcinoid with pluripotent hormonal potential](https://www.hpbonline.org/article/S1365-182X(16)31013-9/fulltext). *HPB*, *18*, e381-e382.
 
 
+
+
+   
 
