--- a/CV.Rmd
+++ b/CV.Rmd
@@ -2,14 +2,14 @@
 name: Naveen
 surname: Kannan
 position: "Research Associate"
-address: "Cleveland, Ohio"
+address: "Cleveland, Ohio | United States Permanent Resident"
 www: naveenkannan.netlify.app
 phone: +1 973 519 5397
 email: "naveen.kannan12@gmail.com"
 github: naveenk2022
 linkedin: naveen-kannan-177120118
 date: "`r format(Sys.time(), '%B %Y')`"
-aboutme: "Data Scientist experienced with data analysis, visualization, building scientific pipelines and Data Engineering. I have a strong passion for learning, documentation and automation. United States Permanent Resident."
+aboutme: "Data Scientist experienced with automating and building scientific workflows, data analysis, visualization and Data Engineering. I have a strong passion for innovation and problem solving. I enjoy learning new skills and blogging about them on my website."
 headcolor: 414141
 output: 
   vitae::awesomecv
@@ -27,6 +27,19 @@ library(glue)
 source(file = here("data","data.r"))
 ```
 
+# Work Experience   
+
+```{r Research, results = "asis"}
+experience %>%
+  detailed_entries(
+    with = title,
+    what = unit,
+    why = detail,
+    when = glue::glue("{startMonth} {startYear} - {endMonth} {endYear}",.na = ""),
+    where = where, .protect = F
+  )
+```
+
 # Education
 
 ```{r}
@@ -39,19 +52,45 @@ tribble(
   detailed_entries(Institution, Year, Degree, Where,Detail)
 ```
 
-# Work Experience
+# Skills 
 
-```{r Research, results = "asis"}
+```{r SKILLS}
 
-experience %>%
+skills %>%
   detailed_entries(
-    with = title,
-    what = unit,
-    why = detail,
-    when = glue::glue("{startMonth} {startYear} - {endMonth} {endYear}",.na = ""),
-    where = where, .protect = F
+    with = area,
+    what = skills
   )
 
+```
+
+```{r skills, eval=FALSE, include=FALSE, results='markup'}
+tribble(
+   ~`Operating Systems`, 
+   ~`Programming Languages`,
+   ~`Software`,
+   ~`Geospatial Analytics`,
+   ~`Markup Languages`,
+   ~`Version Control`,
+   ~`Python-based skills`,
+   ~`Bioinformatics Tools`,
+  "Unix, Kubuntu Debian Linux, Fedora Red Hat Linux, Raspbian Debian Linux, Windows 11",
+  "Python, R, Bash, SQL",
+  "Hadoop/Spark/Hive, Jupyter, Docker, Singularity, SLURM, Ansible",
+  "Geopandas, sf(R), QGIS, ArcGIS",
+  "LaTeX, Markdown, RMarkdown",
+  "Git, GitHub, gh client",
+  "PySpark, Tensorflow, Pytorch, pandas, scikit-learn, numpy, scipy",
+  "samtools, BCFtools, HTSlib, Tabix"
+) %>%
+  kable(booktabs = T, align = 'c', escape = F, format = "latex") %>%
+  kable_styling(full_width = F, 
+                font_size = 9, 
+                latex_options = "hold_position", 
+                position = "center") %>% 
+  row_spec(0, bold = T, color = "#414141") %>% 
+  row_spec(1, bold = F, color = "#7f7f7f") %>% 
+  column_spec(column = 1:8, width = '2.00cm')
 ```
 
 # Teaching Experience
@@ -83,18 +122,6 @@ leadership %>%
   )
 
 ```
-# Technical Skills 
-
-```{r SKILLS}
-
-skills %>%
-  detailed_entries(
-    with = area,
-    what = skills
-  )
-
-```
-
 
 # Publications
 
