--- a/Resume/awesome-cv.cls
+++ b/Resume/awesome-cv.cls
@@ -566,7 +566,7 @@
 \newcommand*{\makecvfooter}[3]{%
   \fancyfoot{}
   \fancyfoot[L]{\footerstyle{#1}}
-  \fancyfoot[C]{\footerstyle{#2}}
+  \fancyfoot[C]{\footerstyle{Naveen Kannan - Resume}}
   \fancyfoot[R]{\footerstyle{#3}}
 }
 
